--- a/LightTube/Views/Shared/ChannelTabItem.cshtml
+++ b/LightTube/Views/Shared/ChannelTabItem.cshtml
@@ -1,12 +1,11 @@
-﻿@using InnerTube
-@model (ChannelTabs Tab, string Id, LightTube.Localization.LocalizationManager Localization)
+﻿@using ChannelTab = InnerTube.Models.ChannelTab
+@model (ChannelTab Tab, string Id, LightTube.Localization.LocalizationManager Localization)
 @{
 	string className = "channel-tabs__item";
-	string lastPathPart = Context.Request.Path.Value.Split("/").Last().Split("?").First();
 	
-	if (lastPathPart == Model.Tab.ToString().ToLower() || (lastPathPart == Model.Id && Model.Tab == ChannelTabs.Home))
+	if (Model.Tab.Selected)
 	{
 		className += " active";
 	}
 }
-<a href="/channel/@Model.Id/@Model.Tab.ToString().ToLower()" class="@className">@Model.Localization.GetString("channel.tab." + Model.Tab.ToString().ToLower())</a>
+<a href="/channel/@Model.Id/@Model.Tab.Tab.ToString().ToLower()" class="@className">@Model.Localization.GetString("channel.tab." + Model.Tab.Tab.ToString().ToLower())</a>
