--- a/LightTube/Views/Youtube/Search.cshtml
+++ b/LightTube/Views/Youtube/Search.cshtml
@@ -1,5 +1,4 @@
-﻿@using InnerTube.Protobuf
-@using InnerTube.Protobuf.Params
+﻿@using InnerTube.Protobuf.Params
 @using InnerTube.Renderers
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model SearchContext
@@ -366,7 +365,7 @@
 }
 @foreach (RendererContainer renderer in Model.Results)
 {
-	<partial name="SearchRenderer" model="(renderer, Model.Localization)"/>
+	<partial name="Renderers/SearchRenderer" model="(renderer, Model.Localization)"/>
 }
 </div>
 <div class="next-page">
