--- a/LightTube/Views/Shared/Renderers/SearchRenderer.cshtml
+++ b/LightTube/Views/Shared/Renderers/SearchRenderer.cshtml
@@ -118,7 +118,7 @@
 		break;
 	case "container":
 		ContainerRendererData container = (ContainerRendererData)Model.Renderer.Data;
-		<partial name="ContainerRenderer" model="(container, Model.Localization)"/>
+		<partial name="Renderers/ContainerRenderer" model="(container, Model.Localization)"/>
 		break;
 	case "unknown":
 		<h1>Unknown RendererContainer.OriginalType: <code>@Model.Renderer.OriginalType</code></h1>
