--- a/LightTube/Views/Youtube/Playlist.cshtml
+++ b/LightTube/Views/Youtube/Playlist.cshtml
@@ -1,5 +1,6 @@
 ﻿@using InnerTube.Renderers
 @using Microsoft.AspNetCore.Http.Extensions
+@using Microsoft.Extensions.Primitives
 @model PlaylistContext
 
 @{
@@ -16,7 +17,7 @@
 		<div class="playlist-page-info-data">
 			@Model.ViewCountText&nbsp;&nbsp;@Model.LastUpdatedText
 			<br><br>
-			@Model.PlaylistDescription
+			@Html.Raw(Model.PlaylistDescription)
 		</div>
 		@if (Model.Editable)
 		{
@@ -35,9 +36,56 @@
 		}
 	</div>
 	<div class="playlist-page-items">
+		@foreach (string alert in Model.Alerts)
+		{
+			<div class="playlist-alert">
+				<div class="playlist-alert_text">
+					@alert
+				</div>
+				<a class="playlist-alert_close" title="dismiss" onclick="this.parentElement.remove()">
+					<svg class="icon" width="20" height="20" fill="currentColor">
+						<use xlink:href="/svg/bootstrap-icons.svg#x-lg"></use>
+					</svg>
+				</a>
+			</div>
+		}
 		@foreach (RendererContainer renderer in Model.Items)
 		{
-			<partial name="Renderer" model="(renderer, Model.Localization)"/>
+			PlaylistVideoRendererData video = (PlaylistVideoRendererData)renderer.Data;
+			<div class="renderer-playlistvideorenderer">
+				<div class="playlist-item-index">
+					@video.VideoIndexText
+				</div>
+				@{
+					Context.Request.Query.TryGetValue("list", out StringValues l);
+				}
+				<a href="/watch?v=@video.VideoId[..11]&list=@l" class="compact-thumbnail">
+					<img loading="lazy" src="@video.Thumbnails.LastOrDefault()?.Url" alt="@video.Title"/>
+					<div class="compact-thumbnail__duration__container">
+						<span class="compact-thumbnail__duration">@video.Duration.ToDurationString()</span>
+					</div>
+				</a>
+				<div class="info">
+					<a href="/watch?v=@video.VideoId[..11]&list=@l" title="@video.Title" class="ml-2 title">@video.Title</a>
+					@if (video.Author != null)
+					{
+						<div class="ml-2">
+							<a href="/channel/@video.Author.Id" title="@video.Author.Title">@video.Author.Title</a>
+						</div>
+					}
+				</div>
+				<div class="flex-divider"></div>
+				<div class="icon-button-container">
+					@if (video.VideoId.Length > 11)
+					{
+						<a href="/removeFromPlaylist?v=@video.VideoId&list=@l" class="icon-button" target="_blank">
+							<svg class="icon" width="20" height="20" fill="currentColor">
+								<use xlink:href="/svg/bootstrap-icons.svg#trash"/>
+							</svg>
+						</a>
+					}
+				</div>
+			</div>
 		}
 	</div>
 </div>
