--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -328,19 +328,20 @@
 							<partial name="Renderers/ContainerRenderer" model="(container, Model.Localization)"/>
 							break;
 						case "unknown":
-							<h1>Unknown RendererContainer.OriginalType: <code>@renderer.OriginalType</code></h1>
-							if (renderer.OriginalType == "UnknownProtobufRenderer")
-							{
-								<code>@Convert.ToBase64String((renderer.Data as UnknownRendererData)?.ProtobufBytes ?? [])</code>
-							}
-							else
-							{
-								<code>@((renderer.Data as UnknownRendererData)?.Json)</code>
-							}
-
+							<div>
+								<div>Unknown RendererContainer.OriginalType: <code>@renderer.OriginalType</code></div>
+								if (renderer.OriginalType == "UnknownProtobufRenderer")
+								{
+									<code>@Convert.ToBase64String((renderer.Data as UnknownRendererData)?.ProtobufBytes ?? [])</code>
+								}
+								else
+								{
+									<code>@((renderer.Data as UnknownRendererData)?.Json)</code>
+								}
+							</div>
 							break;
 						default:
-							<h1>Unexpected RendererContainer.Type: <code>@renderer.Type</code></h1>
+							<div class="renderer-null">Unexpected RendererContainer.Type: <code>@renderer.Type</code></div>
 							break;
 					}
 				}
