--- a/LightTube/Views/Shared/Player.cshtml
+++ b/LightTube/Views/Shared/Player.cshtml
@@ -1,6 +1,6 @@
-﻿@using InnerTube
-@using System.Text.Json
+﻿@using System.Text.Json
 @using InnerTube.Exceptions
+@using InnerTube.Models
 @using InnerTube.Protobuf.Responses
 @using JsonSerializer = System.Text.Json.JsonSerializer
 @model PlayerContext
