--- a/LightTube/Views/Youtube/Channel.cshtml
+++ b/LightTube/Views/Youtube/Channel.cshtml
@@ -22,11 +22,16 @@
 			<img loading="lazy" class="channel-info__avatar" src="@Model.AvatarUrl" alt="@Model.ChannelTitle">
 			<div class="channel-info__info">
 				<span class="channel-info__name ml-1 title">@Model.ChannelTitle</span>
-				<!-- TODO follow format @@handle • @Model.SubscriberCountText • @@Model.VideoCountText  -->
-				<span class="channel-info__subs">@Model.SubscriberCountText</span>
+				<span class="channel-info__subs">@Model.Handle • @Model.Localization.FormatString("channel.header.subscribers", Model.SubscriberCount.ToKMB()) • @Model.Localization.FormatString("channel.header.videos", Model.VideoCount)</span>
+				<a class="channel-info__tagline" href="@(Model.LightTubeAccount ? "" : $"/channel/{Model.Id}/about")">@Model.Tagline</a>
+				<span class="channel-info__links">
+					@Html.Raw(Model.PrimaryLink) @Html.Raw(Model.SecondaryLink)
+				</span>
 				@if (!Model.LightTubeAccount)
 				{
-					<partial name="SubscribeButton" model="(Model.Id, Model.Localization)"/>
+					<div style="display: flex">
+						<partial name="SubscribeButton" model="(Model.Id, Model.Localization)"/>
+					</div>
 				}
 				else if (Model.Editable)
 				{
